--- a/src/styles/calendar/view.css
+++ b/src/styles/calendar/view.css
@@ -138,6 +138,15 @@
 	color: hsl(var(--accent-h), var(--accent-s), var(--accent-l), 1);
 }
 
+.full-calendar-container .calendar-day-header {
+	width: 100%;
+	display: flex;
+	flex-direction: row-reverse;
+	justify-content: space-between;
+	align-items: center;
+	gap: var(--size-4-1);
+}
+
 .full-calendar-container .calendar-day-cell:not(.is-today) {
 	opacity: 0.7;
 }
