--- a/src/styles/forecast.css
+++ b/src/styles/forecast.css
@@ -102,8 +102,11 @@
 	flex: 1;
 	display: flex;
 	flex-direction: column;
-	overflow-y: auto;
 	background-color: var(--background-primary);
+}
+
+.forecast-task-list {
+	overflow-y: auto;
 }
 
 .forecast-calendar-section {
@@ -264,10 +267,12 @@
 	font-size: 0.8em;
 	color: var(--text-muted);
 	background-color: var(--background-modifier-border);
-	padding: 2px 6px;
 	border-radius: 10px;
 	height: var(--size-4-5);
 	width: var(--size-4-5);
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
 }
 
 /* Overdue section styling */
