--- a/src/styles/setting-v2.css
+++ b/src/styles/setting-v2.css
@@ -5,3 +5,16 @@
 	margin-right: var(--size-2-3);
 	margin-top: calc(-1 * var(--size-2-1));
 }
+
+.tg-icons-container {
+	display: flex;
+	gap: var(--size-2-2);
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
+}
+
+.tg-icons-container .tg-status-icon {
+	margin-right: 0;
+	margin-top: 0;
+}
